tempfile/derive_more/tests/compile_fail/as_mut/struct_attr_empty.rs
#[derive(derive_more::AsMut)]
#[as_mut(forward)]
struct Foo;

fn main() {}
